# telephoto-autoupdater

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
bot/: __main__.py  config.py
